--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,26 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-split-pane contentId="main">
+    <ion-menu contentId="main" menuId="menu">
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>{{ 'Menu' | translate }}</ion-title>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content>
+        <ion-list>
+          <ion-menu-toggle auto-hide="false">
+            <ion-item routerLink="/home" routerDirection="root" routerLinkActive="active-menu">
+              <ion-icon name="download-outline" slot="start"></ion-icon>
+              <ion-label>{{ 'IonicSDK' | translate}}</ion-label>
+            </ion-item>
+            <ion-item routerLink="/settings" routerDirection="root" routerLinkActive="active-menu">
+              <ion-icon name="settings-outline" slot="start"></ion-icon>
+              <ion-label>{{ 'Settings' | translate }}</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+        </ion-list>
+      </ion-content>
+    </ion-menu>
+    <ion-router-outlet id="main"></ion-router-outlet>
+  </ion-split-pane>
 </ion-app>
