--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -233,4 +233,16 @@ http://ionicframework.com/docs/theming/ */
 
     --ion-card-background: #1e1e1e;
   }
+ 
+  .desktop-only{
+    display: none;
+  }
+  @media (min-width: 900px) {
+    .mobile-only{
+      display: none;
+    }
+    .desktop-only{
+      display: unset;
+    }
+  }
 }
