Static UI for find PO screen(#1wn3fca)

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -240,6 +240,10 @@ http://ionicframework.com/docs/theming/ */
   grid-template-areas: "search"
                        "main";
 }
+.find > .filters{
+  display: none;
+
+}
 
 .search {
   grid-area: search;
@@ -326,4 +330,7 @@ hr {
   .mobile-only {
     display: none;
   }  
+  .find > .filters{
+    display: unset;
+  }
 }
