Refactored styling and markup throughout the app (#1xx0ebt)

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -291,27 +291,6 @@ http://ionicframework.com/docs/theming/ */
   grid-template-columns: repeat(auto-fill, minmax(343px, 1fr));
 }
 
-ion-thumbnail > img {
-  object-fit: contain;
-}
-
-ion-select {
-  max-width: 100%;
-}
-
-hr {
-  border-width: 1px;
-  color: var(--ion-color-medium);
-}
-
-.desktop-only {
-  display: none;
-}
-
-.mobile-only {
-  display: unset;
-}
-
 .list-item {
   --columns-mobile: 2;
   --columns-tablet: 5;
@@ -342,6 +321,48 @@ hr {
   justify-self: start
 }
 
+.variant-detail {
+  display: grid;
+  grid: "vinfo vtags vmetadata" / 1fr max-content 1fr;
+  align-items: center;
+  border-bottom: 1px solid var(--ion-color-medium);
+}
+
+.variant-info {
+  grid-area: vinfo;
+}
+
+.variant-tags {
+  grid-area: vtags;
+  justify-self: center;
+}
+
+.variant-metadata {
+  grid-area: vmetadata;
+}
+
+
+ion-thumbnail > img {
+  object-fit: contain;
+}
+
+ion-select {
+  max-width: 100%;
+}
+
+hr {
+  border-width: 1px;
+  color: var(--ion-color-medium);
+}
+
+.desktop-only {
+  display: none;
+}
+
+.mobile-only {
+  display: unset;
+}
+
 @media (min-width: 700px) {
   .list-item {
     --col-calc: var(--columns-tablet);
@@ -351,7 +372,6 @@ hr {
     display: unset;
   }
 }
-
 
 @media (min-width: 991px) {
   .find {
@@ -371,6 +391,7 @@ hr {
 
   .sort > ion-item {
     width: 308px;
+    border-left: 1px solid var(--ion-color-medium);
   }
 
   .desktop-only {
@@ -395,5 +416,28 @@ hr {
 
   .tablet {
     display: unset;
+  }
+
+  .header {
+    display: grid;
+    grid: "id       timeline" min-content
+          "cards    timeline" 1fr
+          / 1fr 500px;
+    justify-content: space-between;  
+  }
+
+  .id {
+    grid-area: id;
+  }
+  
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-area: cards;
+  }
+  
+  .timeline {
+    grid-area: timeline;
+    border-left: 1px solid var(--ion-color-medium);
   }
 }
