Added margin using spacer variables (#1xx5u7h)

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -74,6 +74,16 @@ http://ionicframework.com/docs/theming/ */
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** Spacer **/
+  --spacer-2xs: 0.25rem; /* 4px */
+  --spacer-xs: 0.5rem;   /* 8px */
+  --spacer-sm: 1rem;     /* 16px */
+  --spacer-base: 1.5rem; /* 24px */
+  --spacer-lg: 2rem;     /* 32px */
+  --spacer-xl: 2.5rem;   /* 40px */
+  --spacer-2xl: 5rem;    /* 80px */
+  --spacer-3xl: 10rem;   /* 160px */
 }
 
 @media (prefers-color-scheme: dark) {
@@ -248,13 +258,20 @@ http://ionicframework.com/docs/theming/ */
   display: grid;
   grid-template-areas: "search"
                        "main";
+  margin: var(--spacer-lg);                     
 }
+
+.find > .main {
+  margin-left: var(--spacer-lg);
+}
+
 .find > .filters{
   display: none;
 }
 
 .search {
   grid-area: search;
+  margin-bottom: var(--spacer-xl);
 }
 
 .filters {
