Renamed classes, used ionic variables and improved styling throughout the app (#1xx0ebt)

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -335,6 +335,11 @@ hr {
   color: var(--ion-color-medium);
 }
 
+ion-list-header > hr {
+  text-align: right;
+  width: 90%;
+}
+
 .desktop-only {
   display: none;
 }
@@ -370,7 +375,7 @@ hr {
   }
 
   .sort > ion-item {
-    width: 308px;
+    max-width: 308px;
     border-left: 1px solid var(--ion-color-medium);
   }
 
@@ -410,9 +415,9 @@ hr {
     grid-area: id;
   }
   
-  .cards {
+  .info {
     display: grid;
-    grid-template-columns: repeat(2, minmax(314px, max-content));
+    grid-template-columns: repeat(auto-fill, minmax(314px, max-content));
     align-items: start;
     grid-area: cards;
   }
