Improved code to Make white space normal the default for labels (#1zhk016)

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -245,6 +245,10 @@ http://ionicframework.com/docs/theming/ */
   }
 }
 
+ion-item > ion-label {
+  white-space: normal !important;
+}
+
 .overline {
   font-weight: 500 !important;
   font-size: 10px !important;
