Improved tag (#21uvna4)

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -236,7 +236,7 @@ http://ionicframework.com/docs/theming/ */
 }
 
 /** Spacer variables **/
-html {
+body {
   --spacer-2xs: 0.25rem; /* 4px */
   --spacer-xs: 0.5rem;   /* 8px */
   --spacer-sm: 1rem;     /* 16px */
