--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -157,7 +157,7 @@ http://ionicframework.com/docs/theming/ */
     --ion-background-color-rgb: 0,0,0;
 
     --ion-text-color: #ffffff;
-    --ion-text-color-rgb: 255,255,255;
+    --ion-text-color-rgb: var(--ion-item-border-color, var(--ion-border-color, var(--ion-color-step-150, rgba(0, 0, 0, 0.13))));
 
     --ion-color-step-50: #0d0d0d;
     --ion-color-step-100: #1a1a1a;
@@ -457,6 +457,14 @@ ion-list-header > hr {
 
 @media (prefers-color-scheme: dark) {
   ion-chip > ion-icon {
-    color: var(--ion-text-color);
+    color: var(--ion-color-dark);
+  }
+
+  .chip-outline {
+    border-color: var(--ion-color-dark);
+  }
+
+  ion-item {
+    --border-color: var(--ion-color-medium)
   }
 } 
