Improved code by using abbreviation tag on short forms(#24w9jhc)

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -256,6 +256,10 @@ body {
   text-transform: uppercase !important;
 }
 
+abbr {
+  text-decoration: none;
+}
+
 .find {
   display: grid;
   grid-template-areas: "search"
