Added margin on product image(#24b2mdt)

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -481,8 +481,11 @@ ion-card {
     border-left: var(--border-medium);
   }
 
-  .product-image > img {
+  .product-image {
     margin: var(--spacer-xs) 0 0 var(--spacer-xs);
+  }
+
+  .product-image > img {
     border: var(--border-medium);
     border-radius: 10px;
     padding: var(--spacer-base);
