--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -349,6 +349,10 @@ h1,h2 {
   font-size: 16px;
 }
 
+ion-item > h1,h2 {
+  margin: 0;
+}
+
 ion-avatar > img ,
 ion-thumbnail > img {
   object-fit: contain;
