Improved code by maling styling on card header global and applying outline to customer loyalty chip(#2893v1u)

--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -375,6 +375,12 @@ ion-card {
   border-radius: 8px;
 }
 
+ion-card-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 .desktop-only {
   display: none;
 }
