--- a/src/theme/variables.css
+++ b/src/theme/variables.css
@@ -236,27 +236,8 @@ http://ionicframework.com/docs/theming/ */
 }
 
 body {
-  /** Spacer variables **/
-  --spacer-2xs: 0.25rem; /* 4px */
-  --spacer-xs: 0.5rem;   /* 8px */
-  --spacer-sm: 1rem;     /* 16px */
-  --spacer-base: 1.5rem; /* 24px */
-  --spacer-lg: 2rem;     /* 32px */
-  --spacer-xl: 2.5rem;   /* 40px */
-  --spacer-2xl: 5rem;    /* 80px */
-  --spacer-3xl: 10rem;   /* 160px */
-
   /** Border variable **/
   --border-medium: 1px solid var(--ion-color-medium);
-}
-
-.overline {
-  font-weight: 500 !important;
-  font-size: 10px !important;
-  line-height: 16px !important;
-  letter-spacing: 1.5px;
-  color: #666;
-  text-transform: uppercase !important;
 }
 
 .find {
@@ -353,8 +334,7 @@ ion-item > h1,h2 {
   margin: 0;
 }
 
-ion-avatar > img ,
-ion-thumbnail > img {
+ion-avatar > img {
   object-fit: contain;
 }
 
@@ -513,17 +493,3 @@ ion-card-header {
     padding: var(--spacer-base);
   }
 }
-
-@media (prefers-color-scheme: dark) {
-  ion-chip > ion-icon {
-    color: var(--ion-color-dark);
-  }
-
-  .chip-outline {
-    border-color: var(--ion-color-dark);
-  }
-
-  ion-item {
-    --border-color: var(--ion-color-medium)
-  }
-} 
